# zyte-parsers

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst  intro.rst  requirements.txt
tests/: test_aggregate_rating.py  test_brand.py  test_breadcrumbs.py  test_gtin.py  test_price.py  test_review.py  test_star_rating.py  utils.py
tests/data/: brand_values.json  breadcrumb_items_extract.json  rating_values.json
tests/data/breadcrumb_items_snippets/: anchors1.html  anchors2.html  comments1.html  include-non-anchor.html  nested-breadcrumbs.html  nested-data-vocabulary.html  nested-ul-element1.html  nested-ul-element2.html  self-link.html  semantic-markup.html  snippet1.html  snippet2.html  snippet3.html  snippet4.html  snippet5.html  snippet6.html  snippet7.html  snippet8.html  td-element.html  ul-element.html  with-drop-down.html  with-drop-down2.html
zyte_parsers/: __init__.py  aggregate_rating.py  api.py  brand.py  breadcrumbs.py  gtin.py  price.py  review.py  star_rating.py  utils.py
