[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zyte-parsers"
description = "Parsing of data from web pages."
authors = [{name = "Zyte Group Ltd", email = "info@zyte.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dependencies = [
    "attrs>=21.3.0",
    "html-text",
    "lxml",
    "parsel",
    "price-parser>=0.3.4",
    "w3lib",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/zytedata/zyte-parsers"

[tool.setuptools.dynamic]
version = {attr = "zyte_parsers.__version__"}

[tool.setuptools.package-data]
zyte_parsers = ["py.typed"]

[tool.isort]
profile = "black"
multi_line_output = 3

[[tool.mypy.overrides]]
module = [
    "html_text.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# Allow test functions to be untyped
disallow_untyped_defs = false
